--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/pre-join/pre-join.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/pre-join/pre-join.component.html
@@ -1,3 +1,19 @@
+<mat-toolbar class="prejoin-toolbar">
+	<img *ngIf="!isMinimal && showLogo" id="branding-logo" src="assets/images/logo.png" ovLogo />
+	<!-- <span>OpenVidu Call</span> -->
+	<span class="spacer"></span>
+
+	<button mat-flat-button [matMenuTriggerFor]="menu" class="lang-button"  *ngIf="!isMinimal">
+		<span>{{langSelected?.name}}</span>
+		<mat-icon>expand_more</mat-icon>
+	</button>
+	<mat-menu #menu="matMenu">
+		<button mat-menu-item *ngFor="let lang of languages" (click)="onLangSelected(lang.ISO)">
+			<span>{{lang.name}}</span>
+		</button>
+	</mat-menu>
+</mat-toolbar>
+
 <div class="container" id="prejoin-container" fxLayout.gt-sm="row" fxLayout.lt-md="column">
 	<div fxFlex.gt-sm="65%" fxFlex.lt-md="55%" fxLayoutAlign="center center" id="layout-container">
 		<ov-session [usedInPrejoinPage]="true">
@@ -15,6 +31,7 @@
 						<button
 							*ngIf="!isMinimal && showBackgroundEffectsButton"
 							[disabled]="isVideoMuted"
+							matTooltip="{{ 'TOOLBAR.BACKGROUND' | translate }}"
 							mat-icon-button
 							id="background-effects-btn"
 							(click)="toggleBackgroundEffects()"
@@ -31,14 +48,14 @@
 		<div fxLayout="column" fxLayoutGap="10px" class="media-panel-container">
 			<div fxLayout.gt-sm="column" fxLayout.lt-md="column" fxLayoutGap="10px" fxFlex="33%">
 				<div fxFlex.gt-sm="100%" fxFlex.lt-md="33%" fxLayoutAlign="center center" fxFlexFill class="nickname-container">
-					<h4 *ngIf="windowSize >= 960">Set your name</h4>
+					<h4 *ngIf="windowSize >= 960">{{ 'PREJOIN.NICKNAME_SECTION' | translate }}</h4>
 					<hr *ngIf="windowSize >= 960" />
 					<div id="nickname-input-container">
 						<button mat-icon-button disabled>
 							<mat-icon>person</mat-icon>
 						</button>
 						<mat-form-field appearance="standard">
-							<mat-label>Nickname</mat-label>
+							<mat-label>{{ 'PREJOIN.NICKNAME' | translate }}</mat-label>
 							<input
 								matInput
 								type="text"
@@ -66,7 +83,7 @@
 				</div>
 
 				<div fxFlex.gt-sm="100%" fxFlex.lt-md="33%" fxLayoutAlign="center center" fxFlexFill class="buttons-container">
-					<h4 *ngIf="windowSize >= 960">Choose your devices</h4>
+					<h4 *ngIf="windowSize >= 960">{{ 'PREJOIN.DEVICE_SECTION' | translate }}</h4>
 					<hr *ngIf="windowSize >= 960" />
 					<!-- Camera -->
 					<div class="device-container-element">
@@ -77,11 +94,15 @@
 							[class.warn-btn]="isVideoMuted"
 							(click)="toggleCam()"
 						>
-							<mat-icon *ngIf="!isVideoMuted" matTooltip="Mute Camera" id="videocam">videocam</mat-icon>
-							<mat-icon *ngIf="isVideoMuted" matTooltip="Unmute Camera" id="videocam_off">videocam_off</mat-icon>
+							<mat-icon *ngIf="!isVideoMuted" matTooltip="{{ 'TOOLBAR.MUTE_VIDEO' | translate }}" id="videocam"
+								>videocam</mat-icon
+							>
+							<mat-icon *ngIf="isVideoMuted" matTooltip="{{ 'TOOLBAR.UNMUTE_VIDEO' | translate }}" id="videocam_off"
+								>videocam_off</mat-icon
+							>
 						</button>
 						<mat-form-field>
-							<mat-label>Video devices</mat-label>
+							<mat-label>{{ 'PREJOIN.VIDEO_DEVICE' | translate }}</mat-label>
 							<mat-select
 								[disabled]="isVideoMuted || !hasVideoDevices"
 								[value]="cameraSelected?.device"
@@ -103,11 +124,13 @@
 							[class.warn-btn]="isAudioMuted"
 							(click)="toggleMic()"
 						>
-							<mat-icon *ngIf="!isAudioMuted" matTooltip="Mute Audio" id="mic">mic</mat-icon>
-							<mat-icon *ngIf="isAudioMuted" matTooltip="Unmute Audio" id="mic_off">mic_off</mat-icon>
+							<mat-icon *ngIf="!isAudioMuted" matTooltip="{{ 'TOOLBAR.MUTE_AUDIO' | translate }}" id="mic">mic</mat-icon>
+							<mat-icon *ngIf="isAudioMuted" matTooltip="{{ 'TOOLBAR.UNMUTE_AUDIO' | translate }}" id="mic_off"
+								>mic_off</mat-icon
+							>
 						</button>
 						<mat-form-field>
-							<mat-label>Audio devices</mat-label>
+							<mat-label>{{ 'PREJOIN.AUDIO_DEVICE' | translate }}</mat-label>
 							<mat-select
 								[disabled]="isAudioMuted || !hasAudioDevices"
 								[value]="microphoneSelected?.device"
@@ -122,7 +145,9 @@
 				</div>
 
 				<div fxFlex.gt-sm="60%" fxLayout.lt-md="column" fxLayoutAlign="center center" fxFlexFill class="join-btn-container">
-					<button mat-flat-button (click)="joinSession()" form="nicknameForm" id="join-button">Join session</button>
+					<button mat-flat-button (click)="joinSession()" form="nicknameForm" id="join-button">
+						{{ 'PREJOIN.JOIN' | translate }}
+					</button>
 				</div>
 			</div>
 		</div>
