openvidu-components: Added black poster when video is muted

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/avatar-profile/avatar-profile.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/avatar-profile/avatar-profile.component.css
@@ -1,4 +1,10 @@
 .poster {
+	height: 100%;
+	width: 100%;
+	background-color: #000000;
+}
+
+.initial {
 	position: absolute;
 	display: inline-grid;
     z-index: 1;
