--- a/openvidu-components-angular/src/app/testing-app/testing.component.html
+++ b/openvidu-components-angular/src/app/testing-app/testing.component.html
@@ -67,13 +67,6 @@
 <div id="events"></div>
 
 <ov-videoconference *ngIf="!showDirectives" [tokens]="tokens" [prejoin]="false">
-	<!-- <div *ovParticipantPanelItemElements>
-	<p>EXTRA INFO</p>
-</div> -->
-
-	<!-- <div *ovParticipantPanelItemElements="let participant">
-	<p>N: {{participant?.nickname}}</p>
-</div> -->
 
 	<!-- TOOLBAR -->
 	<ng-template [ngIf]="ovToolbarSelected">
@@ -84,6 +77,7 @@
 			[fullscreenButton]="fullscreenBtn"
 			[leaveButton]="leaveBtn"
 			[participantsPanelButton]="participantsPanelBtn"
+			[activitiesPanelButton]="activitiesPanelBtn"
 			[chatPanelButton]="chatPanelBtn"
 			[displaySessionName]="displaySessionId"
 			[displayLogo]="displayLogo"
@@ -94,6 +88,7 @@
 			(onFullscreenButtonClicked)="appendElement('onFullscreenButtonClicked')"
 			(onParticipantsPanelButtonClicked)="appendElement('onParticipantsPanelButtonClicked')"
 			(onChatPanelButtonClicked)="appendElement('onChatPanelButtonClicked')"
+			(onActivitiesPanelButtonClicked)="appendElement('onActivitiesPanelButtonClicked')"
 		>
 			<ng-template [ngIf]="ovToolbarAdditionalButtonsSelected">
 				<div *ovToolbarAdditionalButtons id="custom-toolbar-additional-buttons">
@@ -153,6 +148,12 @@
 				</div>
 			</ng-template>
 
+			<ng-template [ngIf]="ovActivitiesPanelSelected">
+				<div *ovActivitiesPanel id="custom-activities-panel">
+					<h1 id="activities-panel-title">CUSTOM ACTIVITIES PANEL</h1>
+				</div>
+			</ng-template>
+
 			<ng-template [ngIf]="ovChatPanelSelected">
 				<ov-chat-panel *ovChatPanel id="custom-chat-panel"></ov-chat-panel>
 			</ng-template>
@@ -195,6 +196,10 @@
 
 	<ng-template [ngIf]="!ovPanelSelected && ovChatPanelSelected">
 		<ov-chat-panel *ovChatPanel id="custom-chat-panel"></ov-chat-panel>
+	</ng-template>
+
+	<ng-template [ngIf]="!ovPanelSelected && ovActivitiesPanelSelected">
+		<ov-activities-panel *ovActivitiesPanel id="custom-activities-panel"></ov-activities-panel>
 	</ng-template>
 
 	<ng-template [ngIf]="!ovPanelSelected && ovParticipantsPanelSelected">
