--- a/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
+++ b/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
@@ -7,8 +7,10 @@
 	[videoMuted]="_videoMuted"
 	[audioMuted]="_audioMuted"
 	[toolbarScreenshareButton]="_toolbarScreenshareButton"
+	[toolbarRecordingButton]="_toolbarRecordingButton"
 	[toolbarFullscreenButton]="_toolbarFullscreenButton"
 	[toolbarLeaveButton]="_toolbarLeaveButton"
+	[toolbarActivitiesPanelButton]="_toolbarActivitiesPanelButton"
 	[toolbarChatPanelButton]="_toolbarChatPanelButton"
 	[toolbarParticipantsPanelButton]="_toolbarParticipantsPanelButton"
 	[toolbarDisplayLogo]="_toolbarDisplayLogo"
@@ -17,6 +19,9 @@
 	[streamDisplayAudioDetection]="_streamDisplayAudioDetection"
 	[streamSettingsButton]="_streamSettingsButton"
 	[participantPanelItemMuteButton]="_participantPanelItemMuteButton"
+	[activitiesPanelRecordingActivity]="_activitiesPanelRecordingActivity"
+	[recordingActivityRecordingsList]="_recordingActivityRecordingsList"
+	[recordingActivityRecordingError]="_recordingActivityRecordingError"
 	(onJoinButtonClicked)="_onJoinButtonClicked()"
 	(onToolbarLeaveButtonClicked)="_onToolbarLeaveButtonClicked()"
 	(onToolbarCameraButtonClicked)="_onToolbarCameraButtonClicked()"
@@ -24,7 +29,15 @@
 	(onToolbarScreenshareButtonClicked)="_onToolbarScreenshareButtonClicked()"
 	(onToolbarParticipantsPanelButtonClicked)="_onToolbarParticipantsPanelButtonClicked()"
 	(onToolbarChatPanelButtonClicked)="_onToolbarChatPanelButtonClicked()"
+	(onToolbarActivitiesPanelButtonClicked)="_onToolbarActivitiesPanelButtonClicked()"
 	(onToolbarFullscreenButtonClicked)="_onToolbarFullscreenButtonClicked()"
+	(onToolbarStartRecordingClicked)="onStartRecordingClicked('toolbar')"
+	(onToolbarStopRecordingClicked)="onStopRecordingClicked('toolbar')"
+	(onActivitiesPanelStartRecordingClicked)="onStartRecordingClicked('panel')"
+	(onActivitiesPanelStopRecordingClicked)="onStopRecordingClicked('panel')"
+	(onActivitiesPanelDownloadRecordingClicked)="_onActivitiesDownloadRecordingClicked($event)"
+	(onActivitiesPanelDeleteRecordingClicked)="_onActivitiesDeleteRecordingClicked($event)"
+	(onActivitiesPanelPlayRecordingClicked)="_onActivitiesPlayRecordingClicked($event)"
 	(onSessionCreated)="_onSessionCreated($event)"
 	(onParticipantCreated)="_onParticipantCreated($event)"
 ></ov-videoconference>
