openvidu-components: Minor changes in recording panel view

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/activities-panel/recording-activity-panel/recording-activity.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/activities-panel/recording-activity-panel/recording-activity.component.html
@@ -65,7 +65,8 @@
 
 				<span *ngIf="recordingStatus === recStatusEnum.STARTING">{{ 'PANEL.RECORDING.STARTING' | translate }} </span>
 				<span *ngIf="recordingStatus === recStatusEnum.STOPPING">{{ 'PANEL.RECORDING.STOPPING' | translate }} </span>
-				<span *ngIf="recordingStatus === recStatusEnum.FAILED" class="recording-error">Message: {{ recordingError | json }} </span>
+				<span *ngIf="recordingStatus === recStatusEnum.FAILED">Message: </span>
+				<span *ngIf="recordingStatus === recStatusEnum.FAILED" class="recording-error">{{ recordingError | json }} </span>
 			</div>
 
 			<!-- Message for no Moderators-->
